Updating title and head icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>CAT Mental Math Trainer</title>
+<!-- Lightning bolt for speed -->
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
+<!-- Brain -->
+<!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>"> -->
+<title>NumBolt - CAT Mental Math Trainer</title>
 <style>
 * {
   margin: 0;
@@ -762,7 +766,7 @@ kbd {
 <body>
 <div class="container">
   <div class="header">
-    <h1>🧠 CAT Mental Math Trainer</h1>
+    <h1>🧠 NumBolt - CAT Mental Math Trainer</h1>
     <p>Master quantitative aptitude with speed and accuracy</p>
   </div>
 
