Removing mobile tips section

--- a/index.html
+++ b/index.html
@@ -885,9 +885,9 @@ kbd {
       <div class="desktop-tips">
         💡 <strong>Speed Tips:</strong> Press <kbd>Enter</kbd> to submit • <kbd>Space</kbd> to continue • <kbd>Esc</kbd> to skip
       </div>
-      <div class="mobile-tips">
+      <!--<div class="mobile-tips">
         📱 <strong>Mobile:</strong> Use the keypad below → Tap "Submit" • Tap "Skip" to skip • Auto-continues after feedback
-      </div>
+      </div>-->
     </div>
 
     <!-- Mobile Keypad -->
