--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
   <div class="header">
-    <h1>🧠 NumBolt - CAT Mental Math Trainer</h1>
+    <h1>⚡NumBolt - CAT Mental Math Trainer</h1>
     <p>Master quantitative aptitude with speed and accuracy</p>
   </div>
 
