--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
 <!-- Brain -->
 <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>"> -->
-<title>NumBolt - CAT Mental Math Trainer</title>
+<title>NumBolt - Bolt Through Mental Math</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
 
 <div class="container">
   <div class="header">
-    <h1>⚡NumBolt - CAT Mental Math Trainer</h1>
+    <h1>⚡NumBolt - Bolt Through Mental Math</h1>
     <p>Master quantitative aptitude with speed and accuracy</p>
   </div>
 
