Updated index.html to fix submit key on keypad layout issue

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <button class="keypad-btn operator" data-key=".">.</button>
       <button class="keypad-btn delete" data-key="backspace">⌫</button>
       <button class="keypad-btn delete" data-key="clear">Clear</button>
-      <button class="keypad-btn enter" data-key="enter">✓ Submit</button>
+      <button class="keypad-btn enter" data-key="enter">Submit</button>
     </div>
 
     <div class="buttons-grid">
