--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <div class="question-section">
       <div class="question-text" id="question">Click "Start Test" to begin your practice session</div>
-      <input type="text" id="answer" class="answer-input" placeholder="Type your answer here" disabled>
+      <input type="text" id="answer" class="answer-input" placeholder="Type your answer here" disabled style="display: none;">
       <div style="margin-top: 15px;">
         <button class="btn btn-skip" id="submitBtn" style="display: none;">✓ Submit</button>
         <button class="btn btn-skip" id="skipBtn" style="display: none;">⏭️ Skip</button>
